...

    <!-- Toolbar -->
    <string name="app_name">Sound Recorder</string>
    <string name="action_licenses">Licenses</string>
    <string name="action_settings">Settings</string>
    <string name="tab_title_record">Record</string>
    <string name="tab_title_saved_recordings">Saved Recordings</string>

    <!-- Toasts -->
    <string name="toast_recording_start">Recording started</string>
    <string name="toast_recording_finish">Recording saved to</string>
    <string name="toast_file_delete">%1$s successfully deleted</string>
    <string name="toast_file_exists">The file %1$s already exists: please choose a different file name</string>
...
    <string name="dialog_device_not_connected_title">Device not connected</string>
    <string name="dialog_device_not_connected_message">The device is not connected to the network.\nTo continue, you must first establish a connection with Wi-Fi or data connection</string>
    <string name="dialog_file_convert">Extract Text From Audio</string>
    <string name="dialog_file_share">Share File</string>
    <string name="dialog_file_rename">Rename File</string>
    <string name="dialog_file_delete">Delete File</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_yes">Yes</string>
    <string name="dialog_action_no">No</string>
    <string name="customAlertDialogFromAudioTitle">Speech-To-Text</string>
    <string name="customAlertDialaogForExtractedTestButtonOk">Ok</string>
    <string name="customAlertDialaogForExtractedTestButtonCopy">Copy</string>
    <string name="textCopiedToClipboard">Text Copied To Clipboard</string>
...
        sed mattis iaculis. Nam id efficitur ex. Nullam dictum rutrum mi. Quisque maximus tincidunt sapien
        sit amet tristique.  </string>

    <string name="no_saved_recordings_message">No saved recordings</string>
    <string name="pause_recording_button">Pause</string>
    <string name="resume_recording_button">Resume</string>
    <string name="default_file_name">My Recording</string>
    <string name="record_prompt">Tap the button to start recording</string>
    <string name="record_in_progress">Recording</string>

    <string name="send_to">Send to</string>

    <!-- Preferences -->
...
